[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Buildings/ConstructionBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/Buildings/Tool_Board.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buildings/Table_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buildings/Table_02.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buildings/Wall_C_02.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buildings/Wall_C_01.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buildings/Wall_C_03.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 42.9537, 51.8824 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Wall_C_02" type="Sprite" parent="Sprite"]
position = Vector2( -1.58743, -22.3854 )
scale = Vector2( 0.260703, 0.128004 )
texture = ExtResource( 5 )

[node name="Wall_C_03" type="Sprite" parent="Sprite/Wall_C_02"]
position = Vector2( 174.337, -0.923935 )
texture = ExtResource( 7 )

[node name="Wall_C_01" type="Sprite" parent="Sprite/Wall_C_02"]
position = Vector2( -172.108, 3.21442 )
texture = ExtResource( 6 )

[node name="Table_01" type="Sprite" parent="Sprite"]
position = Vector2( -24.0965, -29.4798 )
scale = Vector2( 0.326426, 0.456495 )
texture = ExtResource( 3 )

[node name="Table_02" type="Sprite" parent="Sprite/Table_01"]
position = Vector2( 126.548, 0.0395508 )
texture = ExtResource( 4 )

[node name="Tool_Board" type="Sprite" parent="Sprite"]
position = Vector2( 15.4634, -16.8981 )
scale = Vector2( 0.209781, 0.164492 )
texture = ExtResource( 2 )

[node name="BuildTime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.68927, -52.3123 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="BuildTime" to="." method="_on_BuildTime_timeout"]
